made it run (hopefully) on firefox

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,3 +57,5 @@
 <!-- <app-header></app-header> -->
 
 <div class="version">{{ name }} {{ version }}</div>
+
+<input type="file" id="hiddenFileHack" style="display: none" />
